import { CoreObjectNameSingular } from 'shared/types';
import { generateActivityTargetGqlFields } from '@/object-record/graphql/record-gql-fields/utils/generateActivityTargetGqlFields';
import { getTestEnrichedObjectMetadataItemsMock } from '~/testing/utils/getTestEnrichedObjectMetadataItemsMock';

describe('generateActivityTargetGqlFields', () => {
  describe('snapshot tests', () => {
    it('should match snapshot for Note with loadRelations="activity"', () => {
      const result = generateActivityTargetGqlFields({
        objectMetadataItems: getTestEnrichedObjectMetadataItemsMock(),
        activityObjectNameSingular: CoreObjectNameSingular.Note,
        loadRelations: 'activity',
      });

      expect(result).toMatchSnapshot();
    });

    it('should match snapshot for Note with loadRelations="both"', () => {
      const result = generateActivityTargetGqlFields({
        objectMetadataItems: getTestEnrichedObjectMetadataItemsMock(),
        activityObjectNameSingular: CoreObjectNameSingular.Note,
        loadRelations: 'both',
      });

      expect(result).toMatchSnapshot();
    });

    it('should match snapshot for Note with loadRelations="relations"', () => {
      const result = generateActivityTargetGqlFields({
        objectMetadataItems: getTestEnrichedObjectMetadataItemsMock(),
        activityObjectNameSingular: CoreObjectNameSingular.Note,
        loadRelations: 'relations',
      });

      expect(result).toMatchSnapshot();
    });

    it('should match snapshot for Task with loadRelations="activity"', () => {
      const result = generateActivityTargetGqlFields({
        objectMetadataItems: getTestEnrichedObjectMetadataItemsMock(),
        activityObjectNameSingular: CoreObjectNameSingular.Task,
        loadRelations: 'activity',
      });

      expect(result).toMatchSnapshot();
    });

    it('should match snapshot for Task with loadRelations="both"', () => {
      const result = generateActivityTargetGqlFields({
        objectMetadataItems: getTestEnrichedObjectMetadataItemsMock(),
        activityObjectNameSingular: CoreObjectNameSingular.Task,
        loadRelations: 'both',
      });

      expect(result).toMatchSnapshot();
    });

    it('should match snapshot for Task with loadRelations="relations"', () => {
      const result = generateActivityTargetGqlFields({
        objectMetadataItems: getTestEnrichedObjectMetadataItemsMock(),
        activityObjectNameSingular: CoreObjectNameSingular.Task,
        loadRelations: 'relations',
      });

      expect(result).toMatchSnapshot();
    });
  });
});
