// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateActivityTargetGqlFields snapshot tests should match snapshot for Note with loadRelations="activity" 1`] = `
{
  "id": true,
  "note": {
    "id": true,
    "title": true,
  },
}
`;

exports[`generateActivityTargetGqlFields snapshot tests should match snapshot for Note with loadRelations="both" 1`] = `
{
  "createdAt": true,
  "createdBy": true,
  "deletedAt": true,
  "id": true,
  "note": {
    "id": true,
    "title": true,
  },
  "noteId": true,
  "position": true,
  "searchVector": true,
  "targetEmploymentHistory": {
    "id": true,
  },
  "targetEmploymentHistoryId": true,
  "targetKeluarga": {
    "id": true,
    "name": true,
  },
  "targetKeluargaId": true,
  "targetPenduduk": {
    "id": true,
    "name": true,
  },
  "targetPendudukId": true,
  "targetPet": {
    "id": true,
    "name": true,
  },
  "targetPetCareAgreement": {
    "id": true,
  },
  "targetPetCareAgreementId": true,
  "targetPetId": true,
  "targetProgramBantuan": {
    "id": true,
    "name": true,
  },
  "targetProgramBantuanId": true,
  "targetRocket": {
    "id": true,
    "name": true,
  },
  "targetRocketId": true,
  "targetSurveyResult": {
    "id": true,
    "name": true,
  },
  "targetSurveyResultId": true,
  "updatedAt": true,
  "updatedBy": true,
}
`;

exports[`generateActivityTargetGqlFields snapshot tests should match snapshot for Note with loadRelations="relations" 1`] = `
{
  "createdAt": true,
  "createdBy": true,
  "deletedAt": true,
  "id": true,
  "position": true,
  "searchVector": true,
  "targetEmploymentHistory": true,
  "targetEmploymentHistoryId": true,
  "targetKeluarga": true,
  "targetKeluargaId": true,
  "targetPenduduk": true,
  "targetPendudukId": true,
  "targetPet": true,
  "targetPetCareAgreement": true,
  "targetPetCareAgreementId": true,
  "targetPetId": true,
  "targetProgramBantuan": true,
  "targetProgramBantuanId": true,
  "targetRocket": true,
  "targetRocketId": true,
  "targetSurveyResult": true,
  "targetSurveyResultId": true,
  "updatedAt": true,
  "updatedBy": true,
}
`;

exports[`generateActivityTargetGqlFields snapshot tests should match snapshot for Task with loadRelations="activity" 1`] = `
{
  "id": true,
  "task": {
    "id": true,
    "title": true,
  },
}
`;

exports[`generateActivityTargetGqlFields snapshot tests should match snapshot for Task with loadRelations="both" 1`] = `
{
  "createdAt": true,
  "createdBy": true,
  "deletedAt": true,
  "id": true,
  "position": true,
  "searchVector": true,
  "targetEmploymentHistory": {
    "id": true,
  },
  "targetEmploymentHistoryId": true,
  "targetKeluarga": {
    "id": true,
    "name": true,
  },
  "targetKeluargaId": true,
  "targetPenduduk": {
    "id": true,
    "name": true,
  },
  "targetPendudukId": true,
  "targetPet": {
    "id": true,
    "name": true,
  },
  "targetPetCareAgreement": {
    "id": true,
  },
  "targetPetCareAgreementId": true,
  "targetPetId": true,
  "targetProgramBantuan": {
    "id": true,
    "name": true,
  },
  "targetProgramBantuanId": true,
  "targetRocket": {
    "id": true,
    "name": true,
  },
  "targetRocketId": true,
  "targetSurveyResult": {
    "id": true,
    "name": true,
  },
  "targetSurveyResultId": true,
  "task": {
    "id": true,
    "title": true,
  },
  "taskId": true,
  "updatedAt": true,
  "updatedBy": true,
}
`;

exports[`generateActivityTargetGqlFields snapshot tests should match snapshot for Task with loadRelations="relations" 1`] = `
{
  "createdAt": true,
  "createdBy": true,
  "deletedAt": true,
  "id": true,
  "position": true,
  "searchVector": true,
  "targetEmploymentHistory": true,
  "targetEmploymentHistoryId": true,
  "targetKeluarga": true,
  "targetKeluargaId": true,
  "targetPenduduk": true,
  "targetPendudukId": true,
  "targetPet": true,
  "targetPetCareAgreement": true,
  "targetPetCareAgreementId": true,
  "targetPetId": true,
  "targetProgramBantuan": true,
  "targetProgramBantuanId": true,
  "targetRocket": true,
  "targetRocketId": true,
  "targetSurveyResult": true,
  "targetSurveyResultId": true,
  "updatedAt": true,
  "updatedBy": true,
}
`;
